[Styles] Fix the vertical alignment of bezier swatch
Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=626266&signed_aid=N1pP6po5edaucidHhpn8_g==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=626267&signed_aid=in0yJv1E02WI0QorJozzRQ==&inline=1

Fixed: 1519129
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5205272
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/legacy/components/inline_editor/bezierSwatch.css
+++ b/front_end/ui/legacy/components/inline_editor/bezierSwatch.css
@@ -11,7 +11,7 @@
 devtools-icon.bezier-swatch-icon {
   position: relative;
   transform: scale(0.7);
-  margin: -5px -2px -6px -4px;
+  margin: -5px -2px -3px -4px;
   user-select: none;
   color: var(--icon-css);
   cursor: default;
